--- a/about.html
+++ b/about.html
@@ -1,6 +1,55 @@
 ---
-layout: page
+layout: side 
 title: "About"
 description: ""
 ---
 {% include JB/setup %}
+
+ <!-- ABOUT ME -->
+          <div class="box">
+            <h2>About Me</h2>
+            <p>
+            I am a software developer. Have have worked in projects focused on rapid application development all the way to scientific computing. My fascination with tech has helped me to work on problems in multiple domains. 
+            </p>
+          </div>
+
+          <!-- EXPERIENCES -->
+          <div class="box">
+            <h2>Recent</h2>
+            <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where">Contract Me Now</div>
+                <div class="year"></div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession">Full Stack RoR Application</div>
+                <div class="description">
+                  <small>ruby on rails, rspec, postgresql, twilio, devise, scss, jquery, heroku, amazon s3</small><br>
+                  Contract Me Now is a place where employers can find qualified oil field workers within minutes. I kept in close contact with the team and delivered a very well received product.
+                </div>
+              </div>
+            </div>
+            <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where">OGGO Energy</div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession">RoR + Spree Application</div>
+                <div class="description">
+                <small>ruby on rails, spree, rspec, postgresql, devise, scss, jquery, heroku, amazon s3</small><br>
+                OGGO Energy connects buyers and sellers of heavy duty oil and gas equipment. A rails engine was added to the popular open source e-commerce app spree to convert the engine into a marketplace. 
+                </div>
+              </div>
+            </div>
+             <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where">Sunglare v2.0</div>
+                <div class="year"></div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession">Solar Hazard Tracking Application</div>
+                <small>c++11, c, arcgis incl modelbuilder, python, sqlite, nrel solar position algorithm</small>
+                <div class="description">Software I created while earning my undergraduate was used for 3 sections of the 4000 level course "Advanced Computer Mapping" at the University of Lethbridge. Due to a recent change in city infrastructure the project has recently resurged. The code is undertaking a major refactoring and adding of many more additional features to make a more generic solution which will hopefully soon increase the safety of a cities roads.</div>
+              </div>
+            </div>
+          </div>
