--- a/about.html
+++ b/about.html
@@ -25,10 +25,26 @@ description: ""
                 <div class="profession">Full Stack RoR Application</div>
                 <div class="description">
                   <small>ruby on rails, rspec, postgresql, twilio, devise, scss, jquery, heroku, amazon s3</small><br>
-                  Contract Me Now is a place where employers can find qualified oil field workers within minutes. I kept in close contact with the team and delivered a very well received product.
+                  Contract Me Now is a place where employers can find qualified oil field workers within minutes. 
+                  <a href="contractmenow.html">See More.</a>
+                 </div>
+              </div>
+            </div>
+
+             <div class="job clearfix">
+              <div class="col-xs-3">
+                <div class="where">Sunglare v2.0</div>
+                <div class="year"></div>
+              </div>
+              <div class="col-xs-9">
+                <div class="profession">Solar Hazard Tracking Application</div>
+                <small>c++11, c, arcgis incl modelbuilder, python, sqlite, NREL solar position algorithm</small>
+                <div class="description">Software which detects the general case of sun driving hazards.
+                <a href="sunglare.html">See More.</a> 
                 </div>
               </div>
             </div>
+
             <div class="job clearfix">
               <div class="col-xs-3">
                 <div class="where">OGGO Energy</div>
@@ -37,19 +53,9 @@ description: ""
                 <div class="profession">RoR + Spree Application</div>
                 <div class="description">
                 <small>ruby on rails, spree, rspec, postgresql, devise, scss, jquery, heroku, amazon s3</small><br>
-                OGGO Energy connects buyers and sellers of heavy duty oil and gas equipment. A rails engine was added to the popular open source e-commerce app spree to convert the engine into a marketplace. 
+                OGGO Energy connects buyers and sellers of heavy duty oil and gas equipment. Built on top of Spree E-Commerce a marketplace was created. Currently in development.
                 </div>
               </div>
             </div>
-             <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">Sunglare v2.0</div>
-                <div class="year"></div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">Solar Hazard Tracking Application</div>
-                <small>c++11, c, arcgis incl modelbuilder, python, sqlite, nrel solar position algorithm</small>
-                <div class="description">Software I created while earning my undergraduate was used for 3 sections of the 4000 level course "Advanced Computer Mapping" at the University of Lethbridge. Due to a recent change in city infrastructure the project has recently resurged. The code is undertaking a major refactoring and adding of many more additional features to make a more generic solution which will hopefully soon increase the safety of a cities roads.</div>
-              </div>
-            </div>
+
           </div>
