--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@ description: ""
           <div class="box">
             <h2>About Me</h2>
             <p>
-            I am a software developer. Have have worked in projects focused on rapid application development all the way to scientific computing. My fascination with tech has helped me to work on problems in multiple domains. 
+            I am a software developer. Have have worked in projects focused on rapid application development all the way to scientific computing. My fascination with tech has helped me to work on problems in multiple domains. I have a BSc. in Computer Science and GIS (Geographical Information Science) from the University of Lethbridge.
             </p>
           </div>
 
