Update About Page

--- a/about.html
+++ b/about.html
@@ -5,57 +5,75 @@ description: ""
 ---
 {% include JB/setup %}
 
- <!-- ABOUT ME -->
-          <div class="box">
-            <h2>About Me</h2>
-            <p>
-            I am a software developer. Have have worked in projects focused on rapid application development all the way to scientific computing. My fascination with tech has helped me to work on problems in multiple domains. I have a BSc. in Computer Science and GIS (Geographical Information Science) from the University of Lethbridge.
-            </p>
-          </div>
+<!-- ABOUT ME -->
+<div class="box">
+  <h2>About Me</h2>
+  <p>
+  I am a software developer. Have have worked with projects focused on rapid application development all the way to scientific computing. My fascination with tech has helped me to work on problems in multiple domains. I have a BSc. in Computer Science and GIS (Geographical Information Science) from the University of Lethbridge. Recently my focus has been on Full Stack Web Development including technologies such as Ruby, Rails, Elixir, AngularJS, and ReactJS. For fun I tweak vim configs.
+  </p>
+</div>
 
-          <!-- EXPERIENCES -->
-          <div class="box">
-            <h2>Recent</h2>
-            <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">Contract Me Now</div>
-                <div class="year"></div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">Full Stack RoR Application</div>
-                <div class="description">
-                  <small>ruby on rails, rspec, postgresql, twilio, devise, scss, jquery, heroku, amazon s3</small><br>
-                  Contract Me Now is a place where employers can find qualified oil field workers within minutes. 
-                  <a href="contractmenow.html">See More.</a>
-                 </div>
-              </div>
-            </div>
+<!-- EXPERIENCES -->
+<div class="box">
+  <h2>Some Recent</h2>
+  <div class="job clearfix">
+    <div class="col-xs-3">
+      <div class="where">Kudos Inc.</div>
+      <div class="year"></div>
+    </div>
+    <div class="col-xs-9">
+      <div class="profession">Full Stack Application</div>
+      <div class="description">
+        <small>ruby on rails, rspec, mysql, redis, jquery, aws, memcache </small><br>
+        SAAS which makes Social Recognition That's Flexible & Global. 
+      </div>
+      <a href="http://kudosnow.com">See Kudos.</a>
+    </div>
+  </div>
 
-             <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">Sunglare v2.0</div>
-                <div class="year"></div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">Solar Hazard Tracking Application</div>
-                <small>c++11, c, arcgis incl modelbuilder, python, sqlite, NREL solar position algorithm</small>
-                <div class="description">Software which detects the general case of sun driving hazards.
-                <a href="sunglare.html">See More.</a> 
-                </div>
-              </div>
-            </div>
+  <div class="job clearfix">
+    <div class="col-xs-3">
+      <div class="where">Contract Me Now</div>
+      <div class="year"></div>
+    </div>
+    <div class="col-xs-9">
+      <div class="profession">Full Stack Application</div>
+      <div class="description">
+        <small>ruby on rails, rspec, postgresql, twilio, devise, scss, jquery, heroku, amazon s3</small><br>
+        Software which connects needed oil and gas specialists with prospective companies.
+      </div>
+      <a href="contractmenow.html">See More.</a>
+    </div>
+  </div>
 
-            <div class="job clearfix">
-              <div class="col-xs-3">
-                <div class="where">OGGO Energy</div>
-              </div>
-              <div class="col-xs-9">
-                <div class="profession">RoR + Spree Application</div>
-                <div class="description">
-                <small>ruby on rails, spree, rspec, postgresql, devise, scss, jquery, heroku, amazon s3</small><br>
-                OGGO Energy connects buyers and sellers of heavy duty oil and gas equipment. Built on top of Spree E-Commerce a marketplace was created. Currently in development.
-                </div>
-              </div>
-            </div>
+  <div class="job clearfix">
+    <div class="col-xs-3">
+      <div class="where">Sunglare Fiat Lux Project</div>
+      <div class="year"></div>
+    </div>
+    <div class="col-xs-9">
+      <div class="profession">Solar Hazard Tracking Application</div>
+      <div class="description">
+        <small>c++11, c, arcgis incl. modelbuilder, python, sqlite, NREL solar position algorithm</small><br>
+        Software which detects the general case of sun driving hazards.
+      </div>
+      <a href="sunglare.html">See More.</a> 
+    </div>
+  </div>
 
-          </div>
+  <div class="job clearfix">
+    <div class="col-xs-3">
+      <div class="where">OGGO Energy</div>
+    </div>
+    <div class="col-xs-9">
+      <div class="profession">Full Stack e-commerce Application</div>
+      <div class="description">
+        <small>ruby on rails, spree, rspec, postgresql, devise, scss, jquery, heroku, amazon s3</small><br>
+        OGGO Energy connects buyers and sellers of heavy duty oil and gas equipment. Built on top of Spree E-Commerce a marketplace was created. 
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
