update about page

--- a/about.html
+++ b/about.html
@@ -5,75 +5,18 @@ description: ""
 ---
 {% include JB/setup %}
 
-<!-- ABOUT ME -->
 <div class="box">
   <h2>About Me</h2>
   <p>
-  I am a software developer. Have have worked with projects focused on rapid application development all the way to scientific computing. My fascination with tech has helped me to work on problems in multiple domains. I have a BSc. in Computer Science and GIS (Geographical Information Science) from the University of Lethbridge. Recently my focus has been on Full Stack Web Development including technologies such as Ruby, Rails, Elixir, AngularJS, and ReactJS. For fun I tweak vim configs.
+    My name is Ryan Selk, I am a software developer currently located in Calgary, Alberta Canada. I am currently primarily focused on full stack web application development. I started developing software very early in life, creating my first website in 2000 when i was 13. I got my first paying software job in 2006 writing image classification software for a professor at the local University.  I have a passion for software development, I love to learn new technologies as well as dive deeper with existing ones. 
   </p>
-</div>
 
-<!-- EXPERIENCES -->
-<div class="box">
-  <h2>Some Recent</h2>
-  <div class="job clearfix">
-    <div class="col-xs-3">
-      <div class="where">Kudos Inc.</div>
-      <div class="year"></div>
-    </div>
-    <div class="col-xs-9">
-      <div class="profession">Full Stack Application</div>
-      <div class="description">
-        <small>ruby on rails, rspec, mysql, redis, jquery, aws, memcache </small><br>
-        SAAS which makes Social Recognition That's Flexible & Global. 
-      </div>
-      <a href="http://kudosnow.com">See Kudos.</a>
-    </div>
-  </div>
+  <p>
+    In 2009 I graduated with a bachelor's degree with a major in Computer Science and Geographical Information Science. Throughout working through my degree I worked as a Research Assistant for the schools geography department. This gave me a great opportunity to write software which was used by many people and had to adhere to very strict standards. Recently I have been involved with multiple SAAS companies.
+  </p>
 
-  <div class="job clearfix">
-    <div class="col-xs-3">
-      <div class="where">Contract Me Now</div>
-      <div class="year"></div>
-    </div>
-    <div class="col-xs-9">
-      <div class="profession">Full Stack Application</div>
-      <div class="description">
-        <small>ruby on rails, rspec, postgresql, twilio, devise, scss, jquery, heroku, amazon s3</small><br>
-        Software which connects needed oil and gas specialists with prospective companies.
-      </div>
-      <a href="contractmenow.html">See More.</a>
-    </div>
-  </div>
-
-  <div class="job clearfix">
-    <div class="col-xs-3">
-      <div class="where">Sunglare Fiat Lux Project</div>
-      <div class="year"></div>
-    </div>
-    <div class="col-xs-9">
-      <div class="profession">Solar Hazard Tracking Application</div>
-      <div class="description">
-        <small>c++11, c, arcgis incl. modelbuilder, python, sqlite, NREL solar position algorithm</small><br>
-        Software which detects the general case of sun driving hazards.
-      </div>
-      <a href="sunglare.html">See More.</a> 
-    </div>
-  </div>
-
-  <div class="job clearfix">
-    <div class="col-xs-3">
-      <div class="where">OGGO Energy</div>
-    </div>
-    <div class="col-xs-9">
-      <div class="profession">Full Stack e-commerce Application</div>
-      <div class="description">
-        <small>ruby on rails, spree, rspec, postgresql, devise, scss, jquery, heroku, amazon s3</small><br>
-        OGGO Energy connects buyers and sellers of heavy duty oil and gas equipment. Built on top of Spree E-Commerce a marketplace was created. 
-      </div>
-    </div>
-  </div>
+  <p>
+  Outside of software development I have multiple interests. I am a competitive powerlifter who holds several Canadian records including the national record in the total for the 100kg weight class. Growing up I worked in a bicycle shop so I have developed a love for a the outdoors. Generally I hit the gym throughout the week and climb mountains or mountain bike on the weekends when possible. 
+  </p>
 
 </div>
-
-
