--- a/about.html
+++ b/about.html
@@ -8,15 +8,15 @@ description: ""
 <div class="box">
   <h2>About Me</h2>
   <p>
-    My name is Ryan Selk, I am a software developer currently located in Calgary, Alberta Canada. I am currently primarily focused on full stack web application development. I started developing software very early in life, creating my first website in 2000 when i was 13. I got my first paying software job in 2006 writing image classification software for a professor at the local University.  I have a passion for software development, I love to learn new technologies as well as dive deeper with existing ones. 
+    My name is Ryan Selk, I am a software developer currently located in Victoria, British Columbia Canada. I am currently primarily focused on full stack web application development. I started developing software very early in life, creating my first website in 2000 when i was 13. I got my first paying software job in 2006 writing image classification software for a professor at the local University.  I have a passion for software development, I love to learn new technologies as well as dive deeper with existing ones. 
   </p>
 
   <p>
-    In 2009 I graduated with a bachelor's degree with a major in Computer Science and Geographical Information Science. Throughout working through my degree I worked as a Research Assistant for the schools geography department. This gave me a great opportunity to write software which was used by many people and had to adhere to very strict standards. Recently I have been involved with multiple SAAS companies.
+    In 2009 I graduated with a bachelor's degree with a major in Computer Science and Geographical Information Science. Throughout working through my degree I worked as a Research Assistant for the schools geography department. This gave me a great opportunity to write software which was used by many people and had to adhere to very strict standards. I later moved to developing software for web applications.
   </p>
 
   <p>
-  Outside of software development I have multiple interests. I am a competitive powerlifter who holds several Canadian records including the national record in the total for the 100kg weight class. Growing up I worked in a bicycle shop so I have developed a love for a the outdoors. Generally I hit the gym throughout the week and climb mountains or mountain bike on the weekends when possible. 
+  Outside of software development I have multiple interests. I am a competitive powerlifter who holds several Canadian records including the national record in the total for the 100kg weight class. Growing up I worked in a bicycle shop so I have developed a love for a the outdoors. Generally I hit the gym throughout the week and climb mountains or mountain bike on the weekends.
   </p>
 
 </div>
